[package]
name = "html-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "html_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["generate-import-lib"] }
scraper = "0.17.1"

[dev-dependencies]
pyo3 = { version = "0.19.2", features = ["auto-initialize"] }
